--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,11 @@ body {
   font-weight: bold;
   font-size: 22px;
   line-height: 27px;
-  color: #000;
-  margin-bottom: 10px;
+  color: white;
+  margin-bottom: 20px;
+  padding: 4px;
+  padding-left: 10px;
+  background-color: #1e2939;
 }
 
 /* About me section */
@@ -35,23 +38,23 @@ body {
 .about-me-profession {
   font-style: normal;
   font-weight: bold;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 17px;
-  color: #000;
+  color:  #595959;
   margin: 0 0 20px 0;
 }
 
 .about-me-name {
   font-style: normal;
   font-weight: bold;
-  font-size: 45px;
+  font-size: 30px;
   line-height: 55px;
   color: #000;
-  margin: 0 0 25px 0;
+  margin: 0 0 0px 0;
 }
 
 .about-me-description {
-  width: 400px;
+  width: 600px;
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
@@ -62,7 +65,16 @@ body {
 
 /* My projects section */
 
-.main-content-section {
+/* .main-content-section {
+
+} */
+
+.description {
+  margin: 0;
+  width: 500px;
+  padding: 0;
+  padding-left: 5px;
+  color: #595959;
 }
 
 .my-projects-section {
@@ -76,14 +88,15 @@ body {
 .my-projects-item {
   color: #000;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .my-projects-link {
   font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
+  font-weight: bold;
+  font-size: 16px;
   line-height: 24px;
-  color: #595959;
+  color:  #fb6d3a;
 }
 
 .my-projects-text {
@@ -203,4 +216,28 @@ body {
   font-size: 14px;
   line-height: 24px;
   color: #fff;
+}
+
+
+.sir__madam {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #595959;
+  margin-left: 5px;
+}
+
+
+.des{
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0.3;
+  line-height: 30px;
+  color: #595959;
+  margin-left: 5px;
 }
