--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,13 @@ body {
   width: 600px;
 }
 
+.main-content-title.education {
+  margin-top: 0;
+}
+
 /* About me section */
 .about-me-section {
-  margin: 0 0 40px 0;
+  margin: 0 0 20px 0;
 }
 
 .about-me-profession {
@@ -79,7 +83,7 @@ body {
 }
 
 .my-projects-section {
-  margin: 0 0 50px 0;
+  margin: 0 0 25px 0;
 }
 
 .my-projects-list {
@@ -136,6 +140,16 @@ body {
   line-height: 15px;
   color: #a8a8a8;
   margin: 0 0 10px 0;
+}
+
+h5{
+  margin: 0;
+}
+
+.specialization {
+  margin-top: 0;
+  margin-bottom: 0;
+
 }
 
 .my-work-experience-divider {
