--- a/css/style.css
+++ b/css/style.css
@@ -187,7 +187,7 @@ h5{
 .contacts-section,
 .tech-skills-section,
 .soft-skills-section {
-  margin: 50px 0 0 40px;
+  margin: 10px 0 0 40px;
 }
 .sidebar-title {
   font-style: normal;
@@ -196,6 +196,7 @@ h5{
   line-height: 27px;
   color: #fff;
   margin-bottom: 10px;
+  margin-top: 0;
 }
 
 /* Contacts section */
