--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,7 @@ h5{
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
-  color: #575f6b;
+  color: #fb6d3a;
 }
 
 /* Tech skills section*/
